--- a/Curso HTML/002 formulario/ejemplo002.css
+++ b/Curso HTML/002 formulario/ejemplo002.css
@@ -1,34 +1,34 @@
 body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background-color: #000;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  main {
-    width: 400px;
-    margin: 0 auto;
-  }
-  
-  form {
-    border: 1px solid #ccc;
-    padding: 20px;
-  }
-  
-  input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-  }
-  
-  input[type="submit"] {
-    background-color: #000;
-    color: #fff;
-    padding: 10px;
-    cursor: pointer;
-  }
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: rgba(0, 0, 255, 0.1);
+  color: black;
+  padding: 20px;
+}
+
+main {
+  width: 400px;
+  margin: 0 auto;
+}
+
+form {
+  border: 1px solid #ccc;
+  padding: 20px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+input[type="submit"] {
+  background-color: #000;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+}
