--- a/Curso HTML/002 formulario/ejemplo002.css
+++ b/Curso HTML/002 formulario/ejemplo002.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  margin: 0;
+  margin: 20px;
   padding: 0;
 }
 
@@ -8,11 +8,12 @@ header {
   background-color: rgba(0, 0, 255, 0.1);
   color: black;
   padding: 20px;
+  text-align: center;
 }
 
 main {
   width: 400px;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 form {
@@ -21,7 +22,7 @@ form {
 }
 
 input {
-  width: 100%;
+  width: calc(100% - 20px);
   padding: 10px;
   border: 1px solid #ccc;
 }
@@ -31,4 +32,7 @@ input[type="submit"] {
   color: #fff;
   padding: 10px;
   cursor: pointer;
+  width:100%;
+  border:2px solid black;
+  margin-top: 15px;
 }
